--- a/Project1/Project1.ipynb
+++ b/Project1/Project1.ipynb
@@ -127,6 +127,15 @@
     "http://www.snre.umich.edu/eplab/demos/st0/stroopdesc.html\n",
     "***"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
